# Groceries-Basket-Analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  template.py
.github/workflows/: actions.yaml
conf/: configs.yaml
data/processed/: groceries_basket.csv  groceries_transactions.csv
notebooks/: 01_data_transformation.ipynb
reports/: Groceries Basket Analysis Report.md
src/components/: data_processor.py
src/utils/: basic_utils.py
